# NormalMap2Surface

./: README.md
DisplaySurf/: CMakeLists.txt  colormapping.cpp  colormapping.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  surfacedata.cpp  surfacedata.h  surfacegraph.cpp  surfacegraph.h  surfacegraphmodifier.cpp  surfacegraphmodifier.h
nm2surf_cpu/: CMakeLists.txt  main.cpp  math_functions.cpp  math_functions.h
scripts/: gen_test_problem.py
src/: CMakeLists.txt  main.cpp  main_cpu.cpp  main_cuda.cpp  math_functions.cpp  math_functions.h  util_functions.cpp  util_functions.h
